--- a/baoviet-group-bvh-only-insurance-company-vietnam-first-time-been-ranked-fortune-southeast-asia-500.html
+++ b/baoviet-group-bvh-only-insurance-company-vietnam-first-time-been-ranked-fortune-southeast-asia-500.html
@@ -45,7 +45,7 @@
           </ul>
         </div>
       </li>
-      <li>Tuyển dụng</li>
+      <li onclick="window.location.href='/tuyen-dung.html'">Tuyển dụng</li>
     </ul>
     <div class="contact-wrapper">
       <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon">
